--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -50,5 +50,9 @@ nav {
 .navbar-link {
     text-decoration: none;
     color: white;
-    font-weight: 300;
+    font-weight: 400;
+}
+
+.navbar-link:hover {
+    color: rgb(150,150,150);
 }
