--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -7,7 +7,7 @@ nav {
     left: 50%;
     transform: translateX(-50%);
     width: 600px;
-    height: 60px;
+    height: 50px;
     background-color: rgba(255,255,255,0.05);
     backdrop-filter: blur(var(--blur));
     -webkit-backdrop-filter: blur(var(--blur));
@@ -16,7 +16,7 @@ nav {
     display: flex;
     align-content: center;
     justify-content: space-between;
-    padding-inline: 7px;
+    padding-inline: 5px;
 }
 
 /* NAVBAR LOGO */
@@ -28,8 +28,8 @@ nav {
 }
 
 .navbar-logo {
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
     text-decoration: none;
 }
 
@@ -55,4 +55,37 @@ nav {
 
 .navbar-link:hover {
     color: rgb(150,150,150);
+}
+
+/* NAVBAR BUTTONS */
+
+.navbar-buttons {
+    display: flex;
+    align-items: center;
+}
+
+/* NAVBAR THEME */
+
+.navbar-theme {
+    width: 38px;
+    height: 38px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.1rem;
+    border: 1px solid rgba(255,255,255,0.02);
+    background-color: rgba(255,255,255,0.05);
+    cursor: pointer;
+}
+
+.navbar-theme-svg {
+    color: white;
+}
+
+.navbar-theme:hover {
+    background-color: rgba(255,255,255,0.1);
+}
+
+.navbar-theme:active {
+    background-color: rgba(255,255,255,0.04);
 }
