--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -51,10 +51,26 @@ nav {
     text-decoration: none;
     color: white;
     font-weight: 400;
+    position: relative;
 }
 
 .navbar-link:hover {
     color: rgb(200,200,200);
+}
+
+.navbar-link::before {
+    content: '';
+    width: 0;
+    height: 0.5px;
+    background-color: white;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    transition: width 300ms;
+}
+
+.navbar-link:hover::before {
+    width: 100%;
 }
 
 /* NAVBAR BUTTONS */
