--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -105,3 +105,9 @@ nav {
 .navbar-theme:active {
     background-color: rgba(255,255,255,0.04);
 }
+
+/* NAVBAR THEME JS */
+
+.navbar-theme-js > .navbar-theme-svg {
+    display: none;
+}
