--- a/styles/reset.css
+++ b/styles/reset.css
@@ -12,5 +12,7 @@
 }
 
 body {
+    background: url(../assets/bg.svg) no-repeat;
+    background-size: cover;
     background-color: rgb(15,15,15);
 }
