--- a/styles/reset.css
+++ b/styles/reset.css
@@ -12,7 +12,15 @@
 }
 
 body {
-    background: url(../assets/bg.svg) no-repeat;
     background-size: cover;
     background-color: rgb(15,15,15);
+}
+
+body::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: url(../assets/bg.svg);
+    position: absolute;
+    opacity: 0.3;
 }
