--- a/styles/reset.css
+++ b/styles/reset.css
@@ -20,7 +20,8 @@ body::before {
     content: '';
     width: 100%;
     height: 100%;
-    background: url(../assets/bg.svg);
+    background: url(../assets/bg.svg) no-repeat;
+    background-size: cover;
     position: absolute;
     opacity: 0.3;
     z-index: -1;
