--- a/styles/main.css
+++ b/styles/main.css
@@ -22,11 +22,44 @@
     text-transform: uppercase;
 }
 
-
 /* SP CONTAINER INPUT */
 
 .sp-container-input {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+/* SP INPUT INNER */
+
+.sp-container-input-inner {
+    width: 700px;
+    height: 50px;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    background-color: rgb(15,15,15);
+    border: 1px solid rgba(255,255,255,0.2);
+}
+
+.sp-container-input-itself {
+    padding-inline: 20px;
+    border: 0;
+    outline: none;
+    background-color: transparent;
+    color: white;
+    font-size: 1rem;
+}
+
+.sp-container-input-button {
+    font-size: 1rem;
+    padding-inline: 20px;
+    border: 0;
+    background-color: rgb(20,20,20);
+    color: white;
+    border-left: 1px solid rgba(255,255,255,0.2);
+    cursor: pointer;
+}
+
+.sp-container-input-button:hover {
+    background-color: rgb(25,25,25);
 }
