--- a/styles/main.css
+++ b/styles/main.css
@@ -61,5 +61,9 @@
 }
 
 .sp-container-input-button:hover {
+    background-color: rgb(30,30,30);
+}
+
+.sp-container-input-button:active {
     background-color: rgb(25,25,25);
 }
