--- a/styles/main.css
+++ b/styles/main.css
@@ -2,8 +2,17 @@
 
 .sp-container {
     display: flex;
+    align-items: center;
     flex-direction: column;
     row-gap: 60px;
+}
+
+/* SR CONTAINER DIVIDER */
+
+.sp-container-divider {
+    width: 95%;
+    border: 0;
+    border-top: 1px solid rgb(100,100,100);
 }
 
 /* SP CONTAINER INPUT */
@@ -68,11 +77,4 @@
     text-align: center;
     line-height: 45px;
     text-transform: uppercase;
-}
-
-/* SR CONTAINER DIVIDER */
-
-.sp-container-divider {
-    border: 0;
-    border-top: 1px solid rgb(100,100,100);
 }
