--- a/styles/main.css
+++ b/styles/main.css
@@ -55,11 +55,19 @@
 }
 
 .sp-container-input-button:hover {
-    background-color: rgb(30,30,30);
+    background-color: rgb(50,50,50);
 }
 
 .sp-container-input-button:active {
     background-color: rgb(25,25,25);
+}
+
+.sp-container-input-inner:focus-within {
+    border: 1px solid rgba(255,255,255,0.5);
+}
+
+.sp-container-input-inner:focus-within .sp-container-input-button {
+    border-left: 1px solid rgba(255,255,255,0.5);
 }
 
 /* SP CONTAINER HEADER */
