--- a/styles/main.css
+++ b/styles/main.css
@@ -107,6 +107,7 @@
 .sp-output-inner {
     border: 1px solid rgb(100,100,100);
     padding: 20px;
+    background-color: rgb(15,15,15);
 }
 
 .sp-output-inner-header {
@@ -116,6 +117,4 @@
 /* SP OUTPUT THEMSELVES */
 
 .sp-output-themselves {
-    background-color: red;
-    height: 1px;
 }
