--- a/styles/reset.css
+++ b/styles/reset.css
@@ -12,6 +12,7 @@
 }
 
 body {
+    min-height: 100vh;
     background-size: cover;
     background-color: rgb(15,15,15);
 }
@@ -23,6 +24,8 @@ body::before {
     background: url(../assets/bg.svg) no-repeat;
     background-size: cover;
     position: absolute;
+    top: 0;
+    left: 0;
     opacity: 0.3;
     z-index: -1;
 }
