--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -17,6 +17,7 @@ nav {
     align-content: center;
     justify-content: space-between;
     padding-inline: 6.5px;
+    z-index: 999;
 }
 
 /* NAVBAR LOGO */
