--- a/styles/reset.css
+++ b/styles/reset.css
@@ -12,12 +12,11 @@
 }
 
 body {
-    min-height: 100vh;
     background-size: cover;
     background-color: rgb(15,15,15);
 }
 
-body::before {
+/* body::before {
     content: '';
     width: 100%;
     height: 100%;
@@ -28,4 +27,5 @@ body::before {
     left: 0;
     opacity: 0.3;
     z-index: -1;
-}
+    background-attachment: fixed;
+} */
