--- a/styles/main.css
+++ b/styles/main.css
@@ -136,8 +136,8 @@
 .sp-output-themselves {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 15px;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 60px 20px;
 }
 
 /* SP OUTPUT ITSELF */
