--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 /* SOLVE PROBLEMS CONTAINER */
 
 .sp-container {
+    min-height: 100vh;
     display: flex;
     align-items: center;
     flex-direction: column;
