--- a/styles/main.css
+++ b/styles/main.css
@@ -141,6 +141,14 @@
     gap: 20px;
 }
 
+.sp-output-themselves-paragraph {
+    display: none;
+    justify-content: center;
+    color: white;
+    width: 100%;
+    font-weight: 300;
+}
+
 /* SP OUTPUT ITSELF */
 
 .sp-output-itself {
