--- a/styles/main.css
+++ b/styles/main.css
@@ -173,6 +173,7 @@
 
 .sp-output-itself-image-container {
     width: 100%;
+    height: 100%;
     border-bottom: 1px solid rgba(255,255,255,0.05);
     line-height: 0;
     overflow: hidden;
@@ -186,6 +187,7 @@
 /* SP OUTPUT ITSELF INFO */
 
 .sp-output-itself-info {
+    height: 100%;
     padding-inline: 20px;
     padding-block: 13px 15px;
     display: flex;
