--- a/styles/reset.css
+++ b/styles/reset.css
@@ -14,9 +14,10 @@
 body {
     background-size: cover;
     background-color: rgb(15,15,15);
+    position: relative;
 }
 
-/* body::before {
+body::before {
     content: '';
     width: 100%;
     height: 100%;
@@ -28,4 +29,4 @@ body {
     opacity: 0.3;
     z-index: -1;
     background-attachment: fixed;
-} */
+}
