--- a/styles/show-challenge.css
+++ b/styles/show-challenge.css
@@ -36,6 +36,7 @@
     font-weight: 300;
     width: 750px;
     text-align: center;
+    line-height: 28px;
 }
 
 /* CHALLENGE HEADER GRID */
@@ -82,6 +83,13 @@
 /* CHALLENGE DETAILED INFORMATION */
 
 .challenge-detailed-info {
-    height: 22px;
-    background-color: red;
+    background-color: rgb(15,15,15);
+    border: 1px solid rgba(255,255,255,0.1);
+    padding: 20px;
+}
+
+.challenge-detailed-info-text {
+    color: white;
+    font-weight: 400;
+    line-height: 28px;
 }
