--- a/styles/show-challenge.css
+++ b/styles/show-challenge.css
@@ -86,9 +86,17 @@
     background-color: rgb(20,20,20);
     border: 1px solid rgba(255,255,255,0.1);
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
 }
 
-.challenge-detailed-info-text {
+.challenge-detailed-info-subheader {
+    color: white;
+    font-weight: 500;
+}
+
+.challenge-detailed-info-paragraph {
     color: white;
     font-weight: 400;
     line-height: 28px;
